# python-week-2-homework

./: .gitignore  README.md  pyproject.toml
src/: lib.py  main.py
