[tool.poetry]
name = "python-week-2-homework"
version = "0.1.0"
description = "python程序设计第二周学生作业"
authors = ["Qume <qume2005@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "main.py"
from = "src"

[[tool.poetry.packages]]
include = "lib.py"
from = "src"

[tool.poetry.scripts]
default = "main:main"
exercise1 = "lib:Exercise1"
exercise2 = "lib:Exercise2"
exercise3 = "lib:Exercise3"
exercise4 = "lib:Exercise4"
exercise5 = "lib:Exercise5"
